Fix alignment of button group
We can’t align using baseline as some button groups contain a Rails form button

--- a/app/assets/stylesheets/_button-group.scss
+++ b/app/assets/stylesheets/_button-group.scss
@@ -8,7 +8,6 @@
   gap: nhsuk-spacing(3) nhsuk-spacing(4);
 
   @include mq($from: tablet) {
-    align-items: baseline;
     flex-direction: row;
     flex-wrap: wrap;
   }
